After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 732240 - Application name doesn't translate in the about dialog.
Application name doesn't translate in the about dialog.
Status: RESOLVED FIXED
Product: gnome-logs
Classification: Other
Component: general
git master
Other Linux
: Normal minor
: ---
Assigned To: gnome-logs maintainer(s)
gnome-logs maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-06-25 17:50 UTC by Aaron Hamilton
Modified: 2014-06-25 19:10 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch which fixes the issue on master as of 963a1871f40760ebbb842e1740320045ab7c6e00. (642 bytes, patch)
2014-06-25 17:50 UTC, Aaron Hamilton
needs-work Details | Review

Description Aaron Hamilton 2014-06-25 17:50:46 UTC
Created attachment 279240 [details] [review]
Patch which fixes the issue on master as of 963a1871f40760ebbb842e1740320045ab7c6e00.

In the about dialog, "Logs" isn't being translated.
Comment 1 David King 2014-06-25 18:03:10 UTC
Comment on attachment 279240 [details] [review]
Patch which fixes the issue on master as of 963a1871f40760ebbb842e1740320045ab7c6e00.

Thanks for the bug report and patch. As the program-name property defaults to the string set by g_set_application_name(), and that string is used elsewhere in Logs (for the --version argument), could you instead leave the property unset, and call g_set_application_name() with the translated name (probably in gl_application_init)?
Comment 2 Aaron Hamilton 2014-06-25 18:38:37 UTC
It seems when I g_set_application_name(_(PACKAGE_NAME)); in gl_application_init, it seems to ignore the locale and pass the string through untranslated, perhaps I'm missing something.
Comment 3 David King 2014-06-25 19:10:10 UTC
Ah, it seems that gtk_init() calls setlocale(), and therefore the gettext() call must go after that. I fixed this on master with commit 15987f8c2a57d77699b0d1660b0390d982ac58c8.