Use translated application name in about dialog

https://bugzilla.gnome.org/show_bug.cgi?id=732240